@@ -8,9 +8,11 @@ update-manager (1:0.59.11) feisty; urgency=low
     - ensure that the latest kernel is always selected (LP#96196)
     - added nfs-common check in feistyQuirks and ask to install
       it if it appears to be missing
-      
+  * DistUpgrade/DistUpgradeControler.py:
+    - add any additional sanity check at the start of the upgrade
+      to check if the base distro is supported
 
- --
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 27 Mar 2007 22:48:54 +0200
 
 update-manager (1:0.59.10) feisty; urgency=low
 
